@@ -25,6 +25,7 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #484 WebBrowser charset detection error
   - Fixed defect #485 Update for Kinopoisk plugin that allows you to specify IMDB movie URL in .nfo
   - Enhancement  #492 Updates for Sratim plugin and the Hebrew skin
+  - Enhancement  #497 Bug fix and update for FilmDeltaSEPlugin
   
 MovieJukebox 1.0.15 beta
 ------------------------
